--- a/harsha-vardhan/01-WhatIsYourName/01-WhatIsYourName.csproj
+++ b/harsha-vardhan/01-WhatIsYourName/01-WhatIsYourName.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>harsha_vardhan</RootNamespace>
+    <RootNamespace>_01_WhatIsYourName</RootNamespace>
   </PropertyGroup>
 
 </Project>
