--- a/harsha-vardhan/06-Methods/02-RefReturns/02-RefReturns.csproj
+++ b/harsha-vardhan/06-Methods/02-RefReturns/02-RefReturns.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>_06_Methods</RootNamespace>
+    <RootNamespace>_02_RefReturns</RootNamespace>
   </PropertyGroup>
 
 </Project>
